# Assignment-Topsis

./: .gitignore  LICENSE  README.md  app.py  example_data.csv  pyproject.toml  requirements.txt  topsis_web.py
topsis_vriti/: __init__.py  core.py
