[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Topsis-ANGAD-102313005"
version = "0.1.0"
description = "TOPSIS CLI implementation by ANGAD SINGH MADHOK (102313005)"
readme = "README.md"
authors = [{name = "ANGAD SINGH MADHOK", email = "amadhok2_be23@thapar.edu"}]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy>=1.24", "pandas>=2.0"]


[project.scripts]
topsis-cli = "topsis_angad.core:cli"


[tool.setuptools.packages.find]
where = [""]
include = ["topsis_angad*"]

